# as-hq

./: .RData  .Rhistory  .arcconfig  .flowconfig  .gitignore  .gitignore~  .gitmodules  ;w  Environment.js  Environment.json  Environment_demo.json  Environment_nightly.json  README.md  alphasheets-exe.hp  betas  bower.json  dump.rdb  etfArbitrage  evie_clientlog  hg-elements.js  id_rsa_tim  id_rsa_tim.pub  karma.conf.js  kevinchang_clientlog  package.json  raffi_clientlog  server_log_parsing_instructions.txt  tash  tempcopy1  tempcopy2  test-context-all.js  test-context-eval.js  test-context-excel.js  test-context-formula.js  test.hs  y  y.pub
backend/server/: .gitignore  alphasheets-profiling-exe.aux  alphasheets-profiling-exe.hp  alphasheets-profiling-exe.prof  alphasheets-profiling-exe.prof.html  alphasheets-profiling-exe.ps  alphasheets.cabal  asdf.txt  file  nix-builder.hs  rkernel.txt  shell.nix  stack.yaml
backend/server/app/: Main.hs  Main.hs.rej
backend/server/bench/: Lib.hs  Main.hs
backend/server/eval_files/py/headers/: dummy
backend/server/eval_files/r/: temp.r
backend/server/eval_files/sql/: run.py  template.py
backend/server/ipc/: Main.hs
backend/server/migrate/: Conv.hs  DB.hs  Main.hs  Types.hs
backend/server/profiling/: Main.hs
backend/server/rkernel/: Main.hs
backend/server/sheets/: moving_averages.as  python_tutorial.as  python_tutorial_advanced.as  r_tutorial.as  sql_tutorial.as  task_times.as
backend/server/src/AS/: ASJSON.hs  Async.hs  Clients.hs  Daemon.hs  InferenceUtils.hs  LanguageDefs.hs  Logging.hs  Prelude.hs  Reply.hs  Serialize.hs  Users.hs  Util.hs  Window.hs
backend/server/src/AS/Config/: Constants.hs  Internal.hs  Settings.hs  _Environment.hs
backend/server/src/AS/DB/: API.hs  Clear.hs  Eval.hs  Expanding.hs  Export.hs  Graph.hs  Internal.hs  Sheets.hs  Transaction.hs  Users.hs
backend/server/src/AS/Dispatch/: Core.hs  EvalHeader.hs  Expanding.hs  Repl.hs
backend/server/src/AS/Eval/: ColRangeHelpers.hs  CondFormat.hs  Core.hs  Endware.hs  Middleware.hs
backend/server/src/AS/Handlers/: BugReport.hs  Delete.hs  Eval.hs  Import.hs  JumpSelect.hs  LogAction.hs  Misc.hs  Mutate.hs  Paste.hs  Props.hs  Sheets.hs
backend/server/src/AS/Kernels/: API.hs  Internal.hs  LanguageUtils.hs  OCaml.hs  Python.hs  R.hs
backend/server/src/AS/Mock/: DB.hs
backend/server/src/AS/Parsing/: Common.hs  Excel.hs  Read.hs  References.hs  Show.hs  Substitutions.hs
backend/server/src/AS/Types/: Bar.hs  BarProps.hs  Cell.hs  CellProps.hs  Commits.hs  CondFormat.hs  DB.hs  DataModification.hs  Errors.hs  Eval.hs  EvalHeader.hs  Excel.hs  Formats.hs  Graph.hs  Infinites.hs  Locations.hs  Logging.hs  Messages.hs  Mutate.hs  Network.hs  RangeDescriptor.hs  Selection.hs  (+6 more)
backend/server/static/: file-input-handler.py
backend/server/test/: Spec.hs
deployment/router/: router.cabal  stack.yaml
deployment/router/src/: Lib.hs
server/: Control.Monad.Trans.Either  alphasheets-exe.aux  alphasheets-exe.hp  alphasheets-exe.prof  alphasheets-exe.ps  alphasheets-test.aux  alphasheets-test.hp  alphasheets-test.prof  alphasheets-test.ps  alphasheets.cabal  client_messages  debug_log  dump.rdb  find_and_replace.rb  header-bug  server_log  stack.yaml  test.csv  test.csv~
server/app/: Main.hs
server/bench/: Deprecated.hs  Lib.hs  Main.hs
server/eval_files/cpp/: testCPP
server/eval_files/excel/: temp.py  template.py
server/eval_files/ocaml/: test
server/eval_files/py/: header_record.py  repl_record.py  run.py  run.py~  run_repl.py  startup.py  temp.py  temp_repl.py  template.py  template.py~  template_repl.py
server/eval_files/py/headers/: INIT_SHEET_ID.py
server/eval_files/r/: temp.r  template.r
server/eval_files/r/headers/: INIT_SHEET_ID.r  dummy
server/eval_files/sql/: run.py  temp.py  template.py
server/src/AS/: .swp  ;  ASJSON.hs  Clients.hs  ClientsImplementations.hs  DB.hs  Daemon.hs  Dispatch.hs  Eval.hs  Handler.hs  HandlerLibrary.sublime-workspace  InferenceUtils.hs  LanguageDefs.hs  Logging.hs  Reply.hs  TH.hs  Types.hs  Users.hs  Util.hs  Window.hs
server/src/AS/Config/: Internal.hs  Paths.hs  Settings.hs  _Environment.hs
server/src/AS/DB/: .API.hs.swp  API.hs  Clear.hs  Eval.hs  Expanding.hs  Export.hs  Graph.hs  Internal.hs  Reference.hs  Transaction.hs  Transactions.hs  Util.hs
server/src/AS/Dispatch/: .Core.hs.swp  Core.hs  EvalHeader.hs  Expanding.hs  Repl.hs
server/src/AS/Eval/: ColRangeHelpers.hs  CondFormat.hs  Core.hs  Endware.hs  Excel.hs  Lang.hs  Middleware.hs
server/src/AS/Handlers/: .Eval.hs.swp  .Mutate.hs.swo  .Mutate.hs.swp  Delete.hs  Eval.hs  Import.hs  JumpSelect.hs  Misc.hs  Mutate.hs  Paste.hs  Props.hs
server/src/AS/Kernels/: Common.hs  Internal.hs  LanguageUtils.hs  OCaml.hs  R.hs  test.hs
server/src/AS/Parsing/: Common.hs  Eval.hs  Excel.hs  In.hs  Objects.hs  Out.hs  Read.hs  Show.hs  Substitutions.hs
server/src/AS/Types/: Bar.hs  BarProps.hs  Cell.hs  CellProps.hs  Commits.hs  Common.hs  CondFormat.hs  Core.hs  DB.hs  Errors.hs  Eval.hs  Excel.hs  Locations.hs  Messages.hs  Network.hs  RangeDescriptor.hs  RowColProps.hs  Selection.hs  SheetUpdate.hs  Sheets.hs  Updates.hs  User.hs  Values.hs
server/src/AS/logs/: server_log_2016-01-04  server_log_INIT_SHEET_ID2016-01-04
server/src/csources/: redis_db.c
server/src/hiredis/: Makefile  as_db  as_db.c  db.hs  foo  hiredis-test  hiredis.pc  redis  redis_db.c  test
server/static/: AlphaSheets tab - Sheet1.csv  excel-for-seo.xlsx  file-input-handler.py  test.txt
server/static/images/: dummy
server/static/logs/: bug_reports  console_log  server_log  server_logINIT_SHEET_ID
server/test/: ExcelTest.hs  Spec.hs
ws-as-instance/: alphasheets.cabal  odbc.ini  stack.yaml
ws-as-instance/app/: Main.hs
ws-as-instance/src/AS/: Clients.hs  DAG.hs  DB.hs  Daemon.hs  Dispatch.hs  Eval.hs  Handler.hs  Types.hs  TypesHelper.hs  Util.hs  db_odbc.c
ws-as-instance/src/AS/Config/: Paths.hs  Settings.hs
ws-as-instance/src/AS/Eval/: Endware.hs  Lang.hs  Middleware.hs
ws-as-instance/src/AS/Parsing/: Common.hs  In.hs  Out.hs  Regex.hs
(+7170 files in other folders)
