name:                alphasheets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       AS.DAG
                       AS.DB
                       AS.DB.Util
                       AS.DB.API
                       AS.DB.Graph
                       AS.Dispatch
                       AS.Util
                       AS.Clients
                       AS.Config.Paths
                       AS.Config.Settings
                       AS.Eval
                       AS.Eval.Lang
                       AS.Eval.Middleware
                       AS.Eval.Endware
                       AS.Parsing.Common
                       AS.Parsing.Out
                       AS.Parsing.In
                       AS.Types
                       AS.Handler
                       AS.Daemon
  build-depends:       base >= 4.7 && < 5
                     , text                          >= 0.11       && < 2.0
                     , filepath
                     , time
                     , aeson
                     , pyfi
                     , monad-control
                     , parsec
                     , split
                     , strict
                     , directory
                     , process
                     , regex-posix
                     , containers
                     , transformers
                     , mtl
                     , vector
                     , bytestring
                     , websockets
                     , hedis
                     , daemons
                     , data-default
                     , monad-loops
                     , uuid
                     , zeromq4-haskell
                     , semigroups
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                       FlexibleContexts
                       OverloadedStrings
  other-extensions:  ForeignFunctionInterface
                     CPP

executable alphasheets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -with-rtsopts=-N 
  build-depends:       base
                     , alphasheets
                     , aeson
                     , websockets
                     , text
                     , transformers
                     , bytestring
                     , hedis
                     , daemons
                     , data-default

  default-language:    Haskell2010

test-suite alphasheets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alphasheets
                     , text
  ghc-options:         -O2 -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.01"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
