name:                alphasheets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AS.DB.Util
                       AS.DB.API
                       AS.DB.Graph
                       AS.Dispatch.Core
                       AS.Dispatch.Repl
                       AS.Util
                       AS.Clients
                       AS.Config.Paths
                       AS.Config.Settings
                       AS.Eval.Core
                       AS.Eval.Middleware
                       AS.Eval.Endware
                       AS.Kernels.Python.Eval
                       AS.Kernels.Python.Pyfi
                       AS.Kernels.Python.Str
                       AS.Kernels.Excel.Compiler
                       AS.Kernels.Excel.Eval
                       AS.Kernels.Excel.Lib
                       AS.Kernels.Excel.Util
                       AS.Kernels.R
                       AS.Kernels.OCaml
                       AS.Kernels.Common
                       AS.Kernels.LanguageUtils
                       AS.Parsing.Common
                       AS.Parsing.Out
                       AS.Parsing.In
                       AS.Types.Core
                       AS.Types.DB
                       AS.Types.Excel
                       AS.Users
                       AS.Daemon
  build-depends:       base >= 4.7 && < 5
                     , text >= 0.11 && < 2.0
                     , filepath
                     , time
                     , aeson
                     , monad-control
                     , parsec
                     , split
                     , strict
                     , directory
                     , process
                     , regex-posix
                     , containers
                     , transformers
                     , mtl
                     , vector
                     , bytestring
                     , websockets
                     , hedis
                     , daemons
                     , data-default
                     , monad-loops
                     , uuid
                     , zeromq4-haskell
                     , semigroups
                     , bytestring-show
                     , template-haskell
                     , pureMD5
                     , either
                     , statistics
                     , MissingH
                     , inline-r
                     , deepseq
                     , deepseq-generics
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                       FlexibleContexts
                       OverloadedStrings
                       TypeSynonymInstances
                       FlexibleInstances
  PkgConfig-Depends:   python
  other-extensions:    ForeignFunctionInterface
                       CPP

executable alphasheets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
                       -with-rtsopts=-N
  build-depends:       base
                     , alphasheets
                     , aeson
                     , websockets
                     , text
                     , transformers
                     , bytestring
                     , hedis
                     , daemons
                     , data-default
                     , either
                     , inline-r
  PkgConfig-Depends:   python
  extra-libraries:     hiredis
  c-sources:           src/hiredis/redis_db.c
                     , src/AS/Kernels/Python/cdefs.c
  default-language:    Haskell2010

test-suite alphasheets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alphasheets
                     , text
                     , hedis
                     , bytestring
                     , parsec
                     , either
                     , containers
                     , vector
                     , mtl
                     , transformers
                     , inline-r
  ghc-options:         -O2
                       -threaded
                       -with-rtsopts=-N
  PkgConfig-Depends:   python
  extra-libraries:     hiredis
  c-sources:           src/hiredis/redis_db.c
                     , src/AS/Kernels/Python/cdefs.c
  default-language:    Haskell2010

test-suite excel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ExcelTest.hs
  build-depends:       base
                     , alphasheets
                     , text
                     , bytestring
                     , parsec
                     , either
                     , containers
                     , vector
                     , mtl
                     , transformers
                     , hspec
  ghc-options:         -O2
                       -threaded
                       -with-rtsopts=-N
  PkgConfig-Depends:   python
  extra-libraries:     hiredis
  c-sources:           src/hiredis/redis_db.c
                     , src/AS/Kernels/Python/cdefs.c
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
