name:                alphasheets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       AS.DAG
                       AS.DB
                       AS.Dispatch
                       AS.Eval
                       AS.Eval.Lang
                       AS.Parsing.Common
                       AS.Parsing.Out
                       AS.Parsing.In
                       AS.Parsing.Regex
                       AS.Types
                       AS.TypesHelper
  build-depends:       base >= 4.7 && < 5
                     , bytestring                    >= 0.9        && < 0.11
                     , text                          >= 0.11       && < 2.0
                     , filepath
                     , aeson
                     , pyfi
                     , monad-control
                     , parsec
                     , split
                     , strict
                     , directory
                     , process
                     , time
                     , regex-posix
                     , containers
                     , transformers
                     , mtl
  default-language:    Haskell2010
  extensions:          QuasiQuotes
                       FlexibleContexts

executable alphasheets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , alphasheets
                     , websockets
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite alphasheets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alphasheets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
