name:                alphasheets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AS.Prelude
                       AS.ASJSON
                       AS.Daemon
                       AS.LanguageDefs
                       AS.Serialize
                       AS.Async
                       AS.DB.API
                       AS.DB.Clear 
                       AS.DB.Users
                       AS.DB.Export
                       AS.DB.Eval
                       AS.DB.Transaction
                       AS.DB.Internal
                       AS.DB.Graph
                       AS.Dispatch.Core
                       AS.Dispatch.Expanding
                       AS.Clients
                       AS.Config.Constants
                       AS.Config.Settings
                       AS.Eval.CondFormat
                       AS.Eval.Core
                       AS.Eval.Endware
                       AS.Eval.Middleware
                       AS.Eval.ColRangeHelpers
                       AS.Handlers.Delete
                       AS.Handlers.Eval
                       AS.Handlers.JumpSelect
                       AS.Handlers.Misc
                       AS.Handlers.Mutate
                       AS.Handlers.Paste
                       AS.Handlers.Props
                       AS.Handlers.Import
                       AS.Handlers.Sheets
                       AS.Handlers.LogAction
                       AS.Handlers.BugReport
                       AS.InferenceUtils
                       AS.Kernels.Excel.Eval
                       AS.Kernels.Excel.Compiler
                       AS.Kernels.Excel.Lib
                       AS.Kernels.Excel.Util
                       AS.Kernels.Python
                       AS.Kernels.OCaml
                       AS.Kernels.Internal
                       AS.Kernels.R.Types
                       AS.Kernels.R.Client
                       AS.Kernels.R.Server
                       AS.Kernels.R.Shell
                       AS.Logging
                       AS.Parsing.Common
                       AS.Parsing.Show
                       AS.Parsing.Read
                       AS.Parsing.Excel
                       AS.Parsing.Substitutions
                       AS.Reply
                       AS.Types.Bar
                       AS.Types.BarProps
                       AS.Types.Cell
                       AS.Types.CellProps
                       AS.Types.Commits
                       AS.Types.CondFormat
                       AS.Types.DataModification
                       AS.Types.DB
                       AS.Types.Graph
                       AS.Types.Errors
                       AS.Types.Eval
                       AS.Types.EvalHeader
                       AS.Types.Excel
                       AS.Types.Formats
                       AS.Types.Infinites
                       AS.Types.Locations
                       AS.Types.Messages
                       AS.Types.Mutate
                       AS.Types.Network
                       AS.Types.RangeDescriptor
                       AS.Types.Selection
                       AS.Types.Sheets
                       AS.Types.Shift
                       AS.Types.Updates
                       AS.Types.User
                       AS.Types.Values
                       AS.Types.Window
                       AS.Users
                       AS.Util
  build-depends:       base >= 4.7 && < 5
                     , text >= 0.11 && < 2.0
                     , filepath
                     , time
                     , aeson
                     , monad-control
                     , parsec
                     , lens
                     , split
                     , strict
                     , directory
                     , process
                     , regex-posix
                     , containers
                     , transformers
                     , mtl
                     , vector
                     , bytestring
                     , websockets
                     , hedis
                     , daemons
                     , data-default
                     , monad-loops
                     , uuid
                     , zeromq4-haskell
                     , semigroups
                     , bytestring-show
                     , template-haskell
                     , pureMD5
                     , either
                     , statistics
                     , MissingH
                     , inline-r
                     , deepseq
                     , deepseq-generics
                     , cereal
                     , regex-compat
                     , cassava
                     , hashmap
                     , hashable
                     , unordered-containers
                     , safecopy
                     , safe
                     , network
                     , wreq
                     , random
                     , lens-aeson
                     , mysql-simple
                     , old-time
                     , old-locale
                     , parallel-io
                     , cryptohash
                     , http-conduit
                     , attoparsec
                     , word8
                     , attoparsec-expr
                     , scientific
                     , async
                     , unix
                     , exceptions
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                       FlexibleContexts
                       OverloadedStrings
                       TypeSynonymInstances
                       FlexibleInstances
                       TemplateHaskell
                       DeriveGeneric
                       DeriveDataTypeable
                       NoImplicitPrelude
  ghc-options: -fprof-auto -j

executable alphasheets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
                       -W
                       -Werror
                -- profiling
                       -fprof-auto "-with-rtsopts=-s -h -i"
  build-depends:       base
                     , alphasheets
                     , aeson
                     , websockets
                     , text
                     , transformers
                     , bytestring
                     , hedis
                     , daemons
                     , data-default
                     , either
                     , inline-r
                     , parsec
                     , cassava
                     , vector
                     , unordered-containers
                     , lens
                     , split
                     , unix
                     , wai
                     , warp
                     , wai-websockets
                     , wai-app-static
                     , file-embed
                     , containers
                     , directory
                     , filepath
  default-language:    Haskell2010

executable alphasheets-profiling-exe
  hs-source-dirs:      profiling 
  main-is:             Main.hs
  ghc-options:         -O2 
                       -threaded
                       -fprof-auto
                       "-with-rtsopts=-p -s -h -i"
  build-depends:       base
                     , alphasheets
                     , aeson
                     , websockets
                     , text
                     , transformers
                     , bytestring
                     , hedis
                     , daemons
                     , data-default
                     , either
                     , inline-r
                     , parsec
                     , cassava
                     , vector
                     , unordered-containers
                     , lens
                     , split
                     , unix
                     , wai
                     , warp
                     , wai-websockets
                     , wai-app-static
                     , file-embed
                     , containers
                     , directory
                     , deepseq
                     , deepseq-generics
  default-language:    Haskell2010

executable rkernel-exe
  hs-source-dirs:      rkernel
  main-is:             Main.hs
  ghc-options:         -O2 
                       -threaded
                       "-with-rtsopts=-s -h -i"
  build-depends:       base
                     , alphasheets
                     , inline-r
  default-language:    Haskell2010

benchmark alphasheets-bench
  type:               exitcode-stdio-1.0
  hs-source-dirs:     bench
  main-is:            Main.hs
  ghc-options:        -threaded
                      -O2
  build-depends:      base
                    , alphasheets
                    , criterion
                    , text
                    , hedis
                    , deepseq
                    , deepseq-generics
                    , websockets
                    , either
                    , cereal
                    , bytestring
                    , containers
                    , hashmap
                    , hashable
                    , lens
                    , hashtables
                    , lens
                    , async
  default-language:   Haskell2010

executable alphasheets-migrate
  hs-source-dirs:      migrate
  main-is:             Main.hs
  ghc-options:         -O2
                       -threaded
  build-depends:       base
                     , alphasheets
                     , text
                     , bytestring
                     , hedis
                     , either
                     , split
                     , containers
                     , mtl
                     , deepseq
                     , deepseq-generics
                     , safecopy
                     , lens
  default-language:    Haskell2010


test-suite alphasheets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alphasheets
                     , text
                     , hedis
                     , bytestring
                     , parsec
                     , either
                     , containers
                     , vector
                     , mtl
                     , transformers
                     , inline-r
  ghc-options:         -O2
                       -threaded
  default-language:    Haskell2010

test-suite excel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ExcelTest.hs
  build-depends:       base
                     , alphasheets
                     , text
                     , bytestring
                     , parsec
                     , either
                     , containers
                     , vector
                     , mtl
                     , transformers
                     , hspec
  ghc-options:         -O2
                       -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
