name:                router
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/router#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , bytestring
                     , containers
                     , hashids
                     , aeson
                     , parsec
                     , process
                     , transformers
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , TemplateHaskell
  default-language:    Haskell2010

executable router-exe
  hs-source-dirs:      instance-router
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , router
                     , warp
                     , scotty
                     , http-types
                     , wai-cors
                     , bytestring
                     , containers
                     , transformers
                     , lens
                     , wai-extra
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , TemplateHaskell
  default-language:    Haskell2010

test-suite router-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , router
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/router
